bug fixed modal data reset on customer, add validation and guide on form

--- a/app/(sidebarLayout)/_common/UserInfo.module.scss
+++ b/app/(sidebarLayout)/_common/UserInfo.module.scss
@@ -29,7 +29,7 @@
     .linkArea {
         display: flex;
         justify-content: flex-end;
-        a {
+        a, span {
             width: 30px;
             height: 30px;
             border-radius: 50%;
