--- a/components/Form/CustomersForm.module.scss
+++ b/components/Form/CustomersForm.module.scss
@@ -10,6 +10,8 @@
 .inputGroup {
     width: 100%;
     margin-bottom: 10px;
+    padding-bottom: 10px;
+    position: relative;
     label {
         color: #2E322F;
         font-family: Pretendard;
@@ -32,10 +34,9 @@
 
 }
 .memberNo {
-    position: relative;
     .iconSearch {
         position: absolute;
-        top: 50%;
+        top: calc(50% - 8px);
         right:0;
         transform: translate( -50%, 0);
     }
@@ -55,4 +56,13 @@
     }
 }
 
+}
+
+.errorMsg {
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    color: red;
+    font-size: 11px;
+    margin: 5px 0 0;
 }
