--- a/containers/products/ProductsList.module.scss
+++ b/containers/products/ProductsList.module.scss
@@ -14,3 +14,16 @@
         font-size: 50px;
     }
 }
+.table {
+    background-color: #fff;
+    &.withSearchbar {
+        & > div {
+            padding: 20px 50px 10px;
+        }
+        & > div {
+            &:nth-child(2) {
+                padding: 0 50px 0 50px;
+            }
+        }
+    }
+}
