--- a/containers/products/ProductsEdit.module.scss
+++ b/containers/products/ProductsEdit.module.scss
@@ -53,3 +53,11 @@
     }
 }
 }
+
+.errorMsg {
+    color: red;
+    font-size: 12px;
+    font-weight: 500;
+    margin-top: 10px;
+    text-align: center;
+}
