--- a/components/Modal/index.module.scss
+++ b/components/Modal/index.module.scss
@@ -68,5 +68,9 @@
             width: 500px;
             height: 500px;
         }
+        &.prodType {
+            width: 500px;
+            height: 500px;
+        }
     }
 }
