add pagination on modal, fixed pagination on search page

--- a/components/Modal/Customer.module.scss
+++ b/components/Modal/Customer.module.scss
@@ -11,6 +11,8 @@
     }
     .customerList {
         margin: 30px auto;
+        height: 300px;
+        overflow-y: scroll;
         table {
             width: 100%;
             border-collapse: collapse;
