--- a/components/Modal/index.module.scss
+++ b/components/Modal/index.module.scss
@@ -70,7 +70,7 @@
         }
         &.prodType {
             width: 500px;
-            height: 500px;
+            height: auto;
         }
     }
 }
