--- a/components/Form/CustomersForm.module.scss
+++ b/components/Form/CustomersForm.module.scss
@@ -62,7 +62,16 @@
     position: absolute;
     bottom: 0px;
     left: 0;
-    color: red;
+     color: #43B69A;
     font-size: 11px;
     margin: 5px 0 0;
+}
+
+.required {
+    margin-left: 5px;
+    &:after {
+        content: '*';
+        color: #43B69A;
+
+    }
 }
