--- a/components/Files/FileDownloader.module.scss
+++ b/components/Files/FileDownloader.module.scss
@@ -17,12 +17,21 @@
             background-color: #fff;
             width: calc(100% - 150px);
             .file {
+                display: flex;
+                justify-content: space-between;
                 width: 100%;
                 padding: 10px 15px;
                 border-bottom: 1px solid #DEE1E7;
                 border-left: 1px solid #DEE1E7;
                 &:last-child {
                     border-bottom: none;
+                }
+                .delBtn {
+                    font-size: 11px;
+                    background-color: #FF5A5F;
+                    border-radius: 4px;
+                    padding: 5px 10px;
+                    color: #fff;
                 }
             }
         }
