--- a/components/Files/FileUploader.module.scss
+++ b/components/Files/FileUploader.module.scss
@@ -1,8 +1,35 @@
-.fileInput {
-    position: absolute;
-    width: 0;
-    height: 0;
-    padding: 0;
-    overflow: hidden;
-    border: 0;
+.fileUploader {
+    width: 100%;
+    height: auto;
+    margin: 50px auto;
+    .fileInput {
+        position: absolute;
+        width: 0;
+        height: 0;
+        padding: 0;
+        overflow: hidden;
+        border: 0;
+    }
+    .fileSelector {
+        display: flex;
+        align-items: end;
+        justify-content: space-between;
+        width: 100%;
+        .inputGroup {
+            width: calc(100% - 10px);
+        }
+        .fileSelected {
+            width: 100%;
+            padding: 8px 15px 5px 15px;
+            border: 1px solid #DEE1E7;
+            width: 100%;
+            height: 36px;
+            background-color: #fff;
+        }
+    }
+    .btnArea {
+        display: flex;
+        justify-content: center;
+        margin-left: 15px;
+    }
 }
