--- a/components/Toast/index.module.scss
+++ b/components/Toast/index.module.scss
@@ -4,9 +4,8 @@
     padding: 16px 28px;
     color: #fff;
     z-index:9999;
-    background: rgba(107, 115, 135, 0.8);
+    background: #6b7387cc;
     z-index:999;
-    
     &--icon {
         width: 22px;
         height: 22px;
