--- a/components/Form/NoticeForm.module.scss
+++ b/components/Form/NoticeForm.module.scss
@@ -5,12 +5,13 @@
     margin-bottom: 20px;
     .inputGroup {
         margin-bottom: 20px;
-        width: 94%;
+        width: 100%;
         label {
             font-size:14px;
             margin-bottom:5px;
         }
         input {
+            border: 1px solid #DEE1E7;
             width: 100%;
             height: 36px;
             padding: 0 14px;
@@ -18,7 +19,7 @@
         }
     }
     .inputGroupCheckbox {
-        width: calc(6% - 10px);
+        width: calc(5% - 10px);
         margin-left: 10px;
         margin-bottom: 20px;
         label {
@@ -45,19 +46,34 @@
             label {
                 font-size:14px;
                 margin-bottom:5px;
+                input {
+                    vertical-align: middle;
+                    margin-right: 5px;
+                    &[type="radio"] {
+                        appearance: none;
+                        border: max(2px, 0.1em) solid gray;
+                        border-radius: 50%;
+                        width: 1.25em;
+                        height: 1.25em;
+                        transition: border 0.5s ease-in-out;
+                    }
+                    &[type="radio"]:checked {
+                        border: 0.4em solid #43B69A;
+                    }
+                }
             }
-            input {
-                margin-right: 5px;
-            }
+            
         }
     }
 }
-.inputGroup {
-    textarea {
+.contentGroup {
+    margin-bottom: 30px;
+    .textArea {
+        border: 1px solid #DEE1E7;
         width: 100%;
-        padding: 50px;
+        padding: 15px;
         min-height: 400px;
-        padding: 0 14px;
+        height: auto;
         font-size: 14px;
     }
 }
