--- a/containers/billing/product/ProductWrite.module.scss
+++ b/containers/billing/product/ProductWrite.module.scss
@@ -62,6 +62,15 @@
                     transform: translate(-50%,-50%)
                 }
             }
+            .datesearch {
+                   position: relative;
+                svg {
+                    position: absolute;
+                    top: 50%;
+                    right: 20px;
+                    transform: translate(-50%,-50%)
+                }
+            }
         }
     }
     .sw {
