--- a/components/Files/FileUploader.module.scss
+++ b/components/Files/FileUploader.module.scss
@@ -12,7 +12,7 @@
     }
     .fileSelector {
         display: flex;
-        align-items: end;
+        align-items: flex-end;
         justify-content: space-between;
         width: 100%;
         .inputGroup {
