--- a/components/Files/FileDownloader.module.scss
+++ b/components/Files/FileDownloader.module.scss
@@ -32,6 +32,7 @@
                     border-radius: 4px;
                     padding: 5px 10px;
                     color: #fff;
+                    cursor: pointer;
                 }
             }
         }
