--- a/components/Loading/Loading.module.scss
+++ b/components/Loading/Loading.module.scss
@@ -7,7 +7,7 @@
 
 .loading {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 80px;
