--- a/components/Modal/index.module.scss
+++ b/components/Modal/index.module.scss
@@ -72,5 +72,9 @@
             width: 500px;
             height: auto;
         }
+        &.product {
+            width: 500px;
+            height: auto;
+        }
     }
 }
