--- a/containers/notice/NoticeDetailView.module.scss
+++ b/containers/notice/NoticeDetailView.module.scss
@@ -24,6 +24,7 @@
         display: flex;
         align-items: center;
         text-align: center;
+        border-right: 1px solid #DEE1E7;
         label {
             width: 40%;
             background-color: #F7F8FE;
@@ -33,12 +34,12 @@
         }
         .value {
             width: 60%;
-            border-right: 1px solid #DEE1E7;
             padding: 10px 15px;
             font-size:14px;
         }
         &:last-child {
             margin-right: 0;
+            border-right: 0;
         }
     }
 }
